# pico_stepper2

./: .gitignore  convert2uf2.bat  copy2e.bat  program.bat  stepper2.uf2
src/: CMakeLists.txt  blinker.c  encoder.c  encoder.h  loop_bitbang.c  loop_encoder.c  loop_single.c  motor.c  run_cmake.bat
